--- a/ytyt/sass/_header.scss
+++ b/ytyt/sass/_header.scss
@@ -6,7 +6,10 @@
 };
 
 .header{
-    background: #F9F8FD;
+    // background: #F9F8FD;
+    top: 0;
+    padding-top: 12px;
+    
     &_block{
         margin: 0 auto;
         // position: absolute;
@@ -21,10 +24,10 @@
         background: rgba(255, 255, 255, 0.90);
         backdrop-filter: blur(7.5px);
         padding: 0 21px 0 10px;
-        margin-top: 12px;
+        // margin-top: 12px;
         @media (min-width: 200px) and (max-width:1199px) {
             padding: 0 14px 0 10px;
-            margin: 12px 13px 0 13px;
+            margin: 0 13px 0 13px;
         };
     }
     &_left {
