--- a/ytyt/sass/_promo.scss
+++ b/ytyt/sass/_promo.scss
@@ -24,16 +24,19 @@
     height: 555px;
     padding-bottom: 20px;
     @media (min-width: 200px) and (max-width:1199px) {
-      height: 612px;      
+      height: 612px;   
+      height: 689px;   
     };
     &_text{
         position: relative;
         z-index: 2;
+        margin-top: 133px;
         @media (min-width: 200px) and (max-width:1199px) {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items:center;
+            margin-top: 77px;
         };
     }
     &_header{
