--- a/ytyt/sass/_coast.scss
+++ b/ytyt/sass/_coast.scss
@@ -7,6 +7,7 @@
 
 
 .coast{
+    background: #f9f8fd;
     &_header{
 
     }
@@ -17,8 +18,11 @@
         display: flex;
         flex-direction: row;
         column-gap: 70px;
+        row-gap: 21px;
+        margin-top: 35px;
         @media (max-width: 767px) and (min-width: 200px) {
             flex-direction: column;
+            margin-top: 25px;
         };
         
         &_item{
@@ -69,7 +73,130 @@
         }
     }
 
+    .scroll_img{
+        margin-left: 29px;
+        margin-top: 22px;
+
+    }
+    &_table{
+        background: #fff;
+        border-radius: 30px;
+        margin: 0 auto;
+        max-width: 1160px;
+        height: 550px;
+        display: flex;
+        padding-top: 36px;
+        // justify-content: center;
+        // align-items: center;
+        margin-top: 41px;
+        @media (min-width: 768px) and (max-width:1199px) {
+            overflow: scroll;
+            margin-top: 20px;
+    
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            height: 483px;
+            padding-top: 16px;
+            overflow: scroll;
+            margin-top: 20px;
+
+
+        };
+        & table{
+            th{
+                height: 25px;
+                text-decoration: none;
+                white-space: nowrap;
+                color: rgb(56, 191, 242);
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 25px;
+                letter-spacing: 0%;
+                text-align: left;
+                &:nth-child(2){
+                    padding: 0 127px 0 180px;
+                };
+                &:nth-child(1){
+                    padding-left: 22px;
+                };
+            }
+            tr{
+                width: 100%;
+                height: 57px;
+                white-space: nowrap;
+                color: rgb(34, 37, 59);
+                font-size: 20px;
+                font-weight: 400;
+                line-height: 25px;
+                letter-spacing: 0%;
+                text-align: left;
+                
+                &:nth-child(even) {
+                    border-radius: 10px;
+                    // background: rgb(243, 243, 243);
+                    td{
+                        background: rgb(243, 243, 243);
+                        &:nth-child(1) {
+                            border-radius: 10px 0 0 10px;
+                            }
+                            &:nth-child(3) {
+                                border-radius: 0 10px 10px 0;}
+                    }
+                }
+                @media (max-width: 767px) and (min-width: 200px) {
+                    height: 50px;
+                };
+                td{
+                    padding-left: 19px;
+                    white-space: nowrap;
+                    max-width: max-content;
+                    &:nth-child(2){
+                        padding: 0 127px 0 180px;
+                    };
+                    @media (max-width: 767px) and (min-width: 200px) {
+                        font-size: 13px;
+                    };
+                }
+                .table_end_title{
+                    color: rgb(34, 37, 59);
+                    font-size: 24px;
+                    font-weight: 800;
+                    line-height: 25px;
+                    letter-spacing: 0%;
+                    text-align: left;
+                    @media (max-width: 767px) and (min-width: 200px) {
+                        font-size: 19px;
+                    };
+                }
+            }
+            .table_start{
+                height: 40px;
+                // padding-left: 22px;
+                
+            }
+        }
+    }
+    .table_description{
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 53px;
+        color: rgb(142, 142, 142);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 25px;
+        letter-spacing: 0%;
+        text-align: left;
+        margin-top: 25px;
+        @media (max-width: 767px) and (min-width: 200px) {
+            font-size: 12px;
+            margin-top: 18px;
+            line-height: 20px;
+            padding-left: 41px;
+        };
+
+    }
     &_form{
+        margin: 0 auto;
         height: 218px;
         border-radius: 30px;
         background: rgb(234, 242, 245);
@@ -79,8 +206,10 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        max-width: 1160px;
+        margin-top: 33px;
         @media (min-width: 768px) and (max-width:1199px) {
-    
+            margin-top: 47px;
         };
         @media (max-width: 767px) and (min-width: 200px) {
             flex-direction: column;
