--- a/ytyt/sass/_footer.scss
+++ b/ytyt/sass/_footer.scss
@@ -1,8 +1,10 @@
 .footer{
-    margin-top: 63px;
+    padding-top: 63px;
+    background: #f9f8fd;
     &_main{
         display: flex;
         justify-content: space-between;
+
         @media (min-width: 768px) and (max-width:1199px) {
     
         };
@@ -193,13 +195,14 @@
         display: flex;
         justify-content: space-between;
         margin-top: 28px;
-        margin-bottom: 28px;
+        
+        padding-bottom: 28px;
         @media (max-width: 767px) and (min-width: 200px) {
             flex-direction: column;
             align-items: center;
             justify-content: center;
             margin-top: 25px;
-            margin-bottom: 25px;
+            padding-bottom: 25px;
         };
         .copyright{
             text-decoration: none;
