--- a/ytyt/sass/_header.scss
+++ b/ytyt/sass/_header.scss
@@ -7,28 +7,43 @@
 
 .header{
     // background: #F9F8FD;
-    top: 0;
-    padding-top: 12px;
-    
+    position: relative;
+    // max-width: 100%;
     &_block{
         margin: 0 auto;
-        // position: absolute;
+        position: absolute;
+        z-index: 5;
         // border: 1px solid #000;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 12px;
+        // transform: translateY(50px );
         display: flex;
         flex-direction: row;
         align-items:center;
         justify-content: space-between;
         max-width: 1160px;
+        width: 100%;
         height: 51px;
         border-radius: 75px;
         background: rgba(255, 255, 255, 0.90);
         backdrop-filter: blur(7.5px);
         padding: 0 21px 0 10px;
         // margin-top: 12px;
-        @media (min-width: 200px) and (max-width:1199px) {
+        
+        @media (min-width: 768px) and (max-width:1199px) {
             padding: 0 14px 0 10px;
-            margin: 0 13px 0 13px;
+            // margin: 0 13px 0 13px;
+            // max-width: 750px;
+            
+            width: calc(100% - 26px);
         };
+        @media (max-width: 767px) and (min-width: 200px) {
+            // max-width: 500px;
+            width: calc(100% - 26px);
+
+        };
+
     }
     &_left {
         display: flex;
